--- a/index.html
+++ b/index.html
@@ -8,6 +8,33 @@
 </head>
 <body>
     <h1>RECEITA</h1>
-    <h2>Sopa de Mondongo Venezolano</h2>
+    <h2>Lanche de Queijo</h2>
+
+    <img src="imagenes/Lanche.jpeg" alt="Lanche de Queijo"/>
+    <p>Delicioso Lanche de Queijo</p>
+
+<section>
+    <h2>Não Fique Sem Ler</h2>
+    <div>
+        <ul>
+           <li>Conhece o Lanche</li>
+           <li>Ingredientes</li>
+           <li>Modo de Preparo</li>
+        </ul>
+    </div>
+</section>
+
+<section>
+    <img src="imagenes/Lanche4.jpg" alt="Presentacion"/>
+    
+    <h3>Conhece o Lanche</h3>
+    <p>
+        Receita ideal para acompanhar o café da manhã ou servir como complemento de um lanche da tarde.
+    </p>
+    <p>
+        Este prato delicioso e barato traz benefícios para a nossa saúde, pois é isento de gordura e pobre em calorias.
+    </p>
+</section>
+    
 </body>
 </html>
