--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
             <iframe width="450" height="350" src="https://www.youtube.com/embed/Bnt4V8xA_-w" title="MISTURE MAISENA COM 1 OVO E NÃO VAI MAIS QUERER PÃO NO CAFÉ DA MANHÃ | receitas fáceis e rapidas" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </section>
+
+    <footer>
+        <h4>Feito por Ramon Franco</h4>
+        <h5>Outubro 2022</h5>
+    </footer>
     
 </body>
 </html>
