Registrando nombre y ancora de Video

--- a/index.html
+++ b/index.html
@@ -12,19 +12,20 @@
 
     <img src="imagenes/Lanche.jpeg" alt="Lanche de Queijo"/>
     <p>Delicioso Lanche de Queijo</p>
-
+     <br>
     <section>
-       <h2>Não Fique Sem Ler</h2>
+       <h2>Não Fique Sem Ler</h2> 
+       <!--Colocacion de enlace interno-->
        <nav>
           <ul>
-            <li><a href="#lanche">Conhece o Lanche</a></li>
-            <li><a href="#ingredientes"> Ingredientes</a></li>
-            <li><a href="#preparo"> Modo de Preparo</a></li>
+             <li><a href="#lanche">Conhece o Lanche</a></li>
+             <li><a href="#ingredientes"> Ingredientes</a></li>
+             <li><a href="#preparo"> Modo de Preparo</a></li>
+             <li><a href="#video"> Asistir Video</a></li>
           </ul>
        </nav>
-
     </section>
-
+    <br>
     <section>
         <h3 id="lanche">Conhece o Lanche</h3>
 
@@ -37,7 +38,7 @@
         Este prato delicioso e barato traz benefícios para a nossa saúde, pois é isento de gordura e pobre em calorias.
         </p>
     </section>
-
+    <br>
     <section>
         <h3 id="ingredientes">Ingredientes</h3>
 
@@ -52,7 +53,7 @@
            <li>Uma Colher de Oleo</li>
         </ul>
     </section>
-
+    <br>
     <section>
         <h3 id="preparo">Modo de preparo</h3>
 
@@ -68,11 +69,13 @@
                 <li>Corte e sirva</li>
             </ol>
         </div>
+        <br>
+        <h3 id="video">Video</h3>
         <div>
             <iframe width="450" height="350" src="https://www.youtube.com/embed/Bnt4V8xA_-w" title="MISTURE MAISENA COM 1 OVO E NÃO VAI MAIS QUERER PÃO NO CAFÉ DA MANHÃ | receitas fáceis e rapidas" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </section>
-
+    <br>
     <footer>
         <h4>Feito por Ramon Franco</h4>
         <h5>Outubro 2022</h5>
